base/result.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: voting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: dockersamples/examplevotingapp_result
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: voting
spec:
  selector:
    app: result
  ports:
    - port: 80
      targetPort: 80
