base/vote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote
  namespace: voting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - name: vote
          image: dockersamples/examplevotingapp_vote
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: voting
spec:
  selector:
    app: vote
  ports:
    - port: 80
      targetPort: 80
